tools/pipeline_definition_language/grammar.grammar
document     ->  statement*

statement    ->  field-def | type-def | import



import       ->  "import" STRING



type-def     ->  enum-decl

enum-decl    ->  "enum" IDENTIFIER ":" [NEWLINE INDENT] (IDENTIFIER "," [NEWLINE INDENT])+



field-def    ->  field-name ":" field-value NEWLINE

field-name   ->  IDENTIFIER
               | IDENTIFIER IDENTIFIER

field-value  ->  literal
               | IDENTIFIER
               | list-decl
               | object-decl
               | match-expr

literal      ->  NUMBER | STRING

list-decl    -> "[" [field-value ("," field-value)*] "]"

object-decl  ->  (NEWLINE INDENT field-def)+

match-expr   -> "match" IDENTIFIER NEWLINE (INDENT match-case NEWLINE)+

match-case   -> IDENTIFIER "->" field-value NEWLINE
